--- a/P2/index.html
+++ b/P2/index.html
@@ -25,7 +25,7 @@
             const arr = [];
             let i=0;
             // if number is 0
-            if (x == 0) {
+            if (x == 0 || x==1) {
                 return 1;
             }
 
@@ -48,7 +48,7 @@
 
             }
             else {
-                document.write('Enter a positive number.');
+                document.getElementById("demo").innerHTML = 'Please Enter a positive number.';
             }
         }
     </script>
